Fixed minor text align and color styles

--- a/frontend/src/components/newsletter_display/newsletterDisplay.module.css
+++ b/frontend/src/components/newsletter_display/newsletterDisplay.module.css
@@ -83,6 +83,7 @@
 }
 
 .newsletterView {
+  font-family: "Open Sans";
   width: 577px;
   height: 50px;
   background-color: white;
@@ -91,6 +92,8 @@
   gap: 10px;
   border-radius: 10px;
   color: black;
+  text-align: start;
+  font-weight: 600;
 }
 
 .newsletterView:hover {
@@ -104,14 +107,16 @@
 }
 
 .timespan {
+  font-family: "Open Sans";
   height: 40px;
   border-radius: 4px;
-  background-color: white;
+  background-color: #d8d8d8;
   font-size: 14px;
   color: black;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-weight: 600;
 }
 
 .timespan:hover {
